--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <title>Tripsparkmedia</title>
+    <title>
+      9to5 Escape | Fuel Your Travel Agency's Growth with Smart Marketing
+    </title>
     <link rel="shortcut icon" type="image/x-icon" href="images/logo.svg" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -60,8 +62,8 @@
                       >
                     </li>
                     <li>
-                      <a href="mailto:Tripsparkmedia@mail.com"
-                        ><i class="fas fa-envelope"></i>support@tripspark.com</a
+                      <a href="mailto:9to5Escape@mail.com"
+                        ><i class="fas fa-envelope"></i>support@9to5escape</a
                       >
                     </li>
                   </ul>
@@ -113,7 +115,7 @@
             <div class="mlogo_wrapper clearfix">
               <div class="mobile_logo">
                 <a href="index.html">
-                  <img src="images/logo.svg" alt="Tripsparkmedia" />
+                  <img src="images/logo.svg" alt="9to5Escape" />
                 </a>
               </div>
               <div id="mmenu_toggle">
@@ -175,7 +177,7 @@
                     <i class="flaticon-envelope"></i>
                     <div class="info-text">
                       <h6>Our Mailbox:</h6>
-                      <p>support@tripsparkmedia.in</p>
+                      <p>support@9to5Escape.in</p>
                     </div>
                   </div>
                   <div class="contact-info box-style1">
@@ -199,11 +201,7 @@
                     name="access_key"
                     value="af0b7193-e1ba-42f6-a435-db4fb28a9f4a"
                   />
-                  <input
-                    type="hidden"
-                    name="website"
-                    value="tripsparkmedia.life"
-                  />
+                  <input type="hidden" name="website" value="9to5Escape.life" />
                   <div class="main-form">
                     <h2>Ready to Get Started?</h2>
                     <p class="font14">
@@ -366,19 +364,12 @@
             </div>
           </div>
           <div class="row mt-65">
-            <div class="col-md-6 mb-4 mb-md-0">
-              <img
-                src="images/logo-light.png"
-                alt=""
-                class="lazyloaded"
-                data-ll-status="loaded"
-                style="height: 40px"
-              />
-            </div>
             <div class="col-md-6 text-left text-md-right align-self-center">
-              <p class="copyright-text">
-                Copyright © 2025 . All Rights Reserved by
-                <a href="https://aetherweb.life/">AetherWeb LLP Technologies</a>
+              <p class="copyright-text text-nowrap">
+                Copyright &copy; 2025 9 to 5 Escape. All Rights Reserved.
+                Designed by
+                <a href="https://aetherweb.life/">AetherWeb LLP Technologies</a
+                >.
               </p>
             </div>
           </div>
