--- a/services.html
+++ b/services.html
@@ -7,7 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <title>Tripsparkmedia</title>
+    <title>
+      9to5 Escape | Fuel Your Travel Agency's Growth with Smart Marketing
+    </title>
     <link rel="shortcut icon" type="image/x-icon" href="images/logo.svg" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -60,8 +62,8 @@
                       >
                     </li>
                     <li>
-                      <a href="mailto:Tripsparkmedia@mail.com"
-                        ><i class="fas fa-envelope"></i>support@tripspark.com</a
+                      <a href="mailto:9to5Escape@mail.com"
+                        ><i class="fas fa-envelope"></i>support@9to5escape</a
                       >
                     </li>
                   </ul>
@@ -113,7 +115,7 @@
             <div class="mlogo_wrapper clearfix">
               <div class="mobile_logo">
                 <a href="index.html">
-                  <img src="images/logo.svg" alt="Tripsparkmedia" />
+                  <img src="images/logo.svg" alt="9to5Escape" />
                 </a>
               </div>
               <div id="mmenu_toggle">
@@ -305,139 +307,6 @@
           </div>
         </section>
 
-        <!-- Pricing Section -->
-        <section class="pricing-section">
-          <div class="container">
-            <div class="section-title">
-              <h2>Choose Your Plan</h2>
-              <p>
-                Select the perfect package that suits your business needs and
-                goals.
-              </p>
-            </div>
-            <div class="pricing-container">
-              <!-- Starter Plan -->
-              <div class="pricing-card">
-                <div class="pricing-header">
-                  <h3>Starter Plan</h3>
-                  <div class="price-container">
-                    <span class="price"
-                      ><span class="currency">₹</span>2999</span
-                    >
-                    <span class="period">Monthly Package</span>
-                  </div>
-                </div>
-                <ul class="feature-list">
-                  <li>
-                    <i class="fas fa-check-circle"></i> Content Planning – 2
-                    posts per month
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Basic Lead Generation
-                    Funnel Setup
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Manage 2 Platforms (5
-                    posts/month)
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> 1 Meta Ads Campaign
-                    (Facebook/Instagram)
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Monthly Performance
-                    Report
-                  </li>
-                </ul>
-                <a href="contact.html" class="btn">Get Started</a>
-              </div>
-
-              <!-- Growth Plan -->
-              <div class="pricing-card">
-                <div class="pricing-header">
-                  <h3>Growth Plan</h3>
-                  <div class="price-container">
-                    <span class="price"
-                      ><span class="currency">₹</span>3999</span
-                    >
-                    <span class="period">Monthly Package</span>
-                  </div>
-                </div>
-                <ul class="feature-list">
-                  <li>
-                    <i class="fas fa-check-circle"></i> Content Planning – 4
-                    posts per month
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Optimized Lead
-                    Generation Funnels
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Manage 3 Platforms (10
-                    posts/month)
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> 2 Optimized Meta Ads
-                    Campaigns
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Lead Nurturing – Email
-                    Automation Setup
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Detailed Monthly
-                    Analytics & Reporting
-                  </li>
-                </ul>
-                <a href="contact.html" class="btn">Get Started</a>
-              </div>
-
-              <!-- Premium Plan -->
-              <div class="pricing-card">
-                <div class="pricing-header">
-                  <h3>Premium Plan</h3>
-                  <div class="price-container">
-                    <span class="price"
-                      ><span class="currency">₹</span>4999</span
-                    >
-                    <span class="period">Monthly Package</span>
-                  </div>
-                </div>
-                <ul class="feature-list">
-                  <li>
-                    <i class="fas fa-check-circle"></i> Content Planning – 8
-                    posts per month
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Advanced Lead Generation
-                    Funnels + Retargeting
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Manage 5 Platforms (15
-                    posts/month)
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> 3 Advanced Meta Ads
-                    Campaigns
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Full Email Funnel with
-                    A/B Testing
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Weekly In-depth
-                    Analytics & Insights
-                  </li>
-                  <li>
-                    <i class="fas fa-check-circle"></i> Dedicated Account
-                    Manager
-                  </li>
-                </ul>
-                <a href="contact.html" class="btn">Get Started</a>
-              </div>
-            </div>
-          </div>
-        </section>
         <!-- Consulation SEction -->
         <section class="section-consultation">
           <div class="container">
@@ -639,19 +508,12 @@
             </div>
           </div>
           <div class="row mt-65">
-            <div class="col-md-6 mb-4 mb-md-0">
-              <img
-                src="images/logo-light.png"
-                alt=""
-                class="lazyloaded"
-                data-ll-status="loaded"
-                style="height: 40px"
-              />
-            </div>
             <div class="col-md-6 text-left text-md-right align-self-center">
-              <p class="copyright-text">
-                Copyright © 2025 . All Rights Reserved by
-                <a href="https://aetherweb.life/">AetherWeb LLP Technologies</a>
+              <p class="copyright-text text-nowrap">
+                Copyright &copy; 2025 9 to 5 Escape. All Rights Reserved.
+                Designed by
+                <a href="https://aetherweb.life/">AetherWeb LLP Technologies</a
+                >.
               </p>
             </div>
           </div>
