--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <title>Tripsparkmedia</title>
+    <title>
+      9to5 Escape | Fuel Your Travel Agency's Growth with Smart Marketing
+    </title>
     <link rel="shortcut icon" type="image/x-icon" href="images/logo.svg" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -71,8 +73,8 @@
                       >
                     </li>
                     <li>
-                      <a href="mailto:Tripsparkmedia@mail.com"
-                        ><i class="fas fa-envelope"></i>support@tripspark.com</a
+                      <a href="mailto:9to5Escape@mail.com"
+                        ><i class="fas fa-envelope"></i>support@9to5escape</a
                       >
                     </li>
                   </ul>
@@ -126,7 +128,7 @@
             <div class="mlogo_wrapper clearfix">
               <div class="mobile_logo">
                 <a href="index.html">
-                  <img src="images/logo.svg" alt="Tripsparkmedia" />
+                  <img src="images/logo.svg" alt="9to5Escape" />
                 </a>
               </div>
               <div id="mmenu_toggle">
@@ -341,19 +343,12 @@
             </div>
           </div>
           <div class="row mt-65">
-            <div class="col-md-6 mb-4 mb-md-0">
-              <img
-                src="images/logo-light.png"
-                alt=""
-                class="lazyloaded"
-                data-ll-status="loaded"
-                style="height: 40px"
-              />
-            </div>
             <div class="col-md-6 text-left text-md-right align-self-center">
-              <p class="copyright-text">
-                Copyright © 2025 . All Rights Reserved by
-                <a href="https://aetherweb.life/">AetherWeb LLP Technologies</a>
+              <p class="copyright-text text-nowrap">
+                Copyright &copy; 2025 9 to 5 Escape. All Rights Reserved.
+                Designed by
+                <a href="https://aetherweb.life/">AetherWeb LLP Technologies</a
+                >.
               </p>
             </div>
           </div>
