--- a/index.html
+++ b/index.html
@@ -147,11 +147,7 @@
                   <li class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
                   </li>
-                  <li class="nav-item">
-                    <a href="javascript:void(0)" class="nav-link search-box">
-                      <i class="las la-search"></i>
-                    </a>
-                  </li>
+               
                 </ul>
               </div>
             </nav>
@@ -783,19 +779,12 @@
           </div>
 
           <div class="col-lg-7">
-            <div class="video-contant">
-              <div class="d-table">
-                <div class="d-table-cell">
-                  <!--  <div class="video-box">
-                    <a
-                      href="https://www.youtube.com/watch?v=0gv7OC9L2s8"
-                      class="video-btn popup-youtube"
-                    >
-                      <i class="las la-play"></i>
-                    </a>
-                  </div> -->
-                </div>
-              </div>
+            <div class="image-content">
+              <img
+                src="https://placehold.co/800x725?text=Legal+Solutions+Made+Simple"
+                alt="LawAssist Team"
+                class="img-fluid"
+              />
             </div>
           </div>
         </div>
@@ -1055,10 +1044,7 @@
       </div>
     </div>
 
-    <!-- End Testimonials Slider Area -->
-
-    <!-- Attorney Area -->
-    <!-- <div
+    
       class="attorney-area pt-100 pb-70"
       style="padding: 100px 0 70px; background: #fff"
     >
@@ -2109,7 +2095,7 @@
           <div class="col-lg-5 col-sm-6">
             <div class="footer-widget">
               <div class="logo">
-                <img src="assets/img/logo-white.png" alt="logo" />
+                <img style="width: 144px;" src="assets/img/logo-white.png" alt="logo" />
               </div>
               <p>
                 At Law Assist, we are committed to delivering expert legal
