--- a/services.html
+++ b/services.html
@@ -149,11 +149,6 @@
                   <li class="nav-item">
                     <a href="contact.html" class="nav-link">Contact Us</a>
                   </li>
-                  <li class="nav-item">
-                    <a href="javascript:void(0)" class="nav-link search-box">
-                      <i class="las la-search"></i>
-                    </a>
-                  </li>
                 </ul>
               </div>
             </nav>
@@ -377,7 +372,11 @@
           <div class="col-lg-5 col-sm-6">
             <div class="footer-widget">
               <div class="logo">
-                <img src="assets/img/logo-white.png" alt="logo" />
+                <img
+                  style="width: 144px"
+                  src="assets/img/logo-white.png"
+                  alt="logo"
+                />
               </div>
               <p>
                 At Law Assist, we are committed to delivering expert legal
