--- a/joinus.html
+++ b/joinus.html
@@ -432,13 +432,13 @@
     <!-- End Contact Area -->
 
     <!-- Footer Area-->
-    <footer class="footer-area pt-100 pb-70">
+    <footer class="footer-area pt-100 pb-70 " style="margin-top: 64px;">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 col-sm-6">
             <div class="footer-widget">
               <div class="logo">
-                <img src="assets/img/logo-white.png" alt="logo" />
+                <img style="width: 144px;;" src="assets/img/logo-white.png" alt="logo" />
               </div>
               <p>
                 At Law Assist, we are committed to delivering expert legal
