--- a/services.html
+++ b/services.html
@@ -57,8 +57,8 @@
                 <div class="col-md-8">
                   <ul class="topbar-info align-self-end clearfix">
                     <li>
-                      <a href="tel:+91 8766270884"
-                        ><i class="fas fa-phone-alt"></i> +91 8766270884</a
+                      <a href="tel:+91 98050 00785"
+                        ><i class="fas fa-phone-alt"></i> +91 98050 00785</a
                       >
                     </li>
                     <li>
